<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.murat.mocksepeti.ui.userdetail.UserDetailActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_user_detail_picture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:paddingTop="30dp">

        <LinearLayout
            android:id="@+id/ll_user_detail_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_user_list">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_login_username"/>

            <TextView
                android:id="@+id/tv_user_detail_first_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_user_detail_last_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_user_detail_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ll_user_detail_name"
            android:orientation="horizontal"
            android:background="@drawable/bg_user_list">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:paddingLeft="2dp"
                android:paddingStart="2dp"
                android:src="@drawable/ic_user_mail"/>

            <TextView
                android:id="@+id/tv_user_detail_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_user_detail_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ll_user_detail_email"
            android:orientation="horizontal"
            android:background="@drawable/bg_user_list">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:paddingLeft="2dp"
                android:paddingStart="2dp"
                android:src="@drawable/ic_user_detail_phone"/>

            <TextView
                android:id="@+id/tv_user_detail_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_user_detail_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ll_user_detail_phone"
            android:orientation="horizontal"
            android:background="@drawable/bg_user_list">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_user_birth_date"/>

            <TextView
                android:id="@+id/tv_user_detail_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_user_detail_location"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ll_user_detail_date"
            android:orientation="horizontal"
            android:background="@drawable/bg_user_list">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_user_detail_location"/>

            <TextView
                android:id="@+id/tv_user_detail_location"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:textSize="16sp"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
